tests/NormalTests/paczka1/small_fuzzy/53607061.err
Error in line 2: BL055E8ZZa S182 94,0
Error in line 12: Fql A14 -4,8
Error in line 9: 0d9H S821 89,5
Error in line 8: BL055E8ZZa A502 30,5
